メインの動作の作成をしました　現状はランダムモードだけ実装されています

--- a/press/index.html
+++ b/press/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/quizpress.css">
-    <script href="./assets/quizpress.js"></script>
-    <script href="./assets/jquery.js"></script>
+    <script src="./assets/jquery.js"></script>
+    <script src="./assets/quizpress.js"></script>
     <title>quiz-press</title>
 </head>
 <body>
+    <!--オプション　追加予定-->
+    <!--
     <div id="mode_selecter">
         <select name="mode">
             <option value="random">ランダムモード</option>
@@ -23,6 +25,7 @@
             <label for="hint">ヒント</label>
         </div>
     </div>
+    -->
     <div class="問題">
         <a id="mondai"></a>
     </div>
